--- a/ArtiomFine_Unit_4_Challenge_Tier_3.ipynb
+++ b/ArtiomFine_Unit_4_Challenge_Tier_3.ipynb
@@ -143,8 +143,7 @@
         "import numpy as np\n",
         "\n",
         "# Load the pyplot collection of functions from matplotlib, as plt \n",
-        "import matplotlib.pyplot as plt \n",
-        "#Test Repo"
+        "import matplotlib.pyplot as plt \n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -171,12 +170,12 @@
         "# First, make a variable called url_LondonHousePrices, and assign it the following link, enclosed in quotation-marks as a string:\n",
         "# https://data.london.gov.uk/download/uk-house-price-index/70ac0766-8902-4eb5-aab5-01951aaed773/UK%20House%20price%20index.xls\n",
         "\n",
-        "_ _ _ = \"https://data.london.gov.uk/download/uk-house-price-index/70ac0766-8902-4eb5-aab5-01951aaed773/UK%20House%20price%20index.xls\"\n",
+        "url_LondonHousePrices= \"https://data.london.gov.uk/download/uk-house-price-index/70ac0766-8902-4eb5-aab5-01951aaed773/UK%20House%20price%20index.xls\"\n",
         "\n",
         "# The dataset we're interested in contains the Average prices of the houses, and is actually on a particular sheet of the Excel file. \n",
         "# As a result, we need to specify the sheet name in the read_excel() method.\n",
         "# Put this data into a variable called properties.  \n",
-        "properties = pd._ _ _(url_LondonHousePrices, sheet_name='Average price', index_col= None)"
+        "properties = pd.read_excel(url_LondonHousePrices, sheet_name='Average price', index_col= 0)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -225,13 +224,54 @@
       "metadata": {
         "id": "Rxirxw_qoAJa",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 428
+        },
+        "outputId": "92635c36-8a9f-4c13-bd28-c2db2c95d0e9"
       },
       "source": [
-        ""
+        "properties.index.name=\"Date\"\n",
+        "\n",
+        "print(properties.columns)\n",
+        "print(properties.head())\n",
+        "\n",
+        "print(properties.head(10).index.tolist())\n",
+        "print(properties.tail(3).index.tolist())\n",
+        "#print(properties.loc[['1995-01-01','2020-01-01']])\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Index(['City of London', 'Barking & Dagenham', 'Barnet', 'Bexley', 'Brent',\n",
+            "       'Bromley', 'Camden', 'Croydon', 'Ealing', 'Enfield', 'Greenwich',\n",
+            "       'Hackney', 'Hammersmith & Fulham', 'Haringey', 'Harrow', 'Havering',\n",
+            "       'Hillingdon', 'Hounslow', 'Islington', 'Kensington & Chelsea',\n",
+            "       'Kingston upon Thames', 'Lambeth', 'Lewisham', 'Merton', 'Newham',\n",
+            "       'Redbridge', 'Richmond upon Thames', 'Southwark', 'Sutton',\n",
+            "       'Tower Hamlets', 'Waltham Forest', 'Wandsworth', 'Westminster',\n",
+            "       'Unnamed: 34', 'Inner London', 'Outer London', 'Unnamed: 37',\n",
+            "       'NORTH EAST', 'NORTH WEST', 'YORKS & THE HUMBER', 'EAST MIDLANDS',\n",
+            "       'WEST MIDLANDS', 'EAST OF ENGLAND', 'LONDON', 'SOUTH EAST',\n",
+            "       'SOUTH WEST', 'Unnamed: 47', 'England'],\n",
+            "      dtype='object')\n",
+            "           City of London Barking & Dagenham  ... Unnamed: 47    England\n",
+            "Date                                          ...                       \n",
+            "NaT             E09000001          E09000002  ...         NaN  E92000001\n",
+            "1995-01-01          91449            50460.2  ...         NaN    53202.8\n",
+            "1995-02-01        82202.8            51085.8  ...         NaN    53096.2\n",
+            "1995-03-01        79120.7              51269  ...         NaN    53201.3\n",
+            "1995-04-01        77101.2            53133.5  ...         NaN    53590.9\n",
+            "\n",
+            "[5 rows x 48 columns]\n",
+            "[NaT, Timestamp('1995-01-01 00:00:00'), Timestamp('1995-02-01 00:00:00'), Timestamp('1995-03-01 00:00:00'), Timestamp('1995-04-01 00:00:00'), Timestamp('1995-05-01 00:00:00'), Timestamp('1995-06-01 00:00:00'), Timestamp('1995-07-01 00:00:00'), Timestamp('1995-08-01 00:00:00'), Timestamp('1995-09-01 00:00:00')]\n",
+            "[Timestamp('2019-11-01 00:00:00'), Timestamp('2019-12-01 00:00:00'), Timestamp('2020-01-01 00:00:00')]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -252,13 +292,45 @@
       "metadata": {
         "id": "cdAu1A3YoH_r",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 289
+        },
+        "outputId": "a5193568-5cde-4b06-8ecb-e2fd5d36fec7"
       },
       "source": [
-        ""
+        "properties=properties.dropna(axis='columns')\n",
+        "properties=properties.drop(['Inner London','Outer London','England'],axis=1)\n",
+        "properties=properties.iloc[1:]\n",
+        "properties=properties.transpose()\n",
+        "print(properties.columns)\n",
+        "print(properties.head())\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "DatetimeIndex(['1995-01-01', '1995-02-01', '1995-03-01', '1995-04-01',\n",
+            "               '1995-05-01', '1995-06-01', '1995-07-01', '1995-08-01',\n",
+            "               '1995-09-01', '1995-10-01',\n",
+            "               ...\n",
+            "               '2019-04-01', '2019-05-01', '2019-06-01', '2019-07-01',\n",
+            "               '2019-08-01', '2019-09-01', '2019-10-01', '2019-11-01',\n",
+            "               '2019-12-01', '2020-01-01'],\n",
+            "              dtype='datetime64[ns]', name='Date', length=301, freq=None)\n",
+            "Date               1995-01-01 1995-02-01  ... 2019-12-01 2020-01-01\n",
+            "City of London          91449    82202.8  ...     734872     775309\n",
+            "Barking & Dagenham    50460.2    51085.8  ...     301816     301057\n",
+            "Barnet                93284.5    93190.2  ...     517986     520682\n",
+            "Bexley                64958.1    64787.9  ...     336972     331683\n",
+            "Brent                 71306.6    72022.3  ...     431245     408523\n",
+            "\n",
+            "[5 rows x 301 columns]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
