Only renaming the columns to years only and verifying with Excel is left

--- a/ArtiomFine_Unit_4_Challenge_Tier_3.ipynb
+++ b/ArtiomFine_Unit_4_Challenge_Tier_3.ipynb
@@ -22,10 +22,21 @@
     "colab": {
       "name": "ArtiomFine Unit 4 Challenge - Tier 3.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/TAnarchy/EngineGroupApplication/blob/master/ArtiomFine_Unit_4_Challenge_Tier_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -217,7 +228,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 428
         },
-        "outputId": "c4ca54b3-5192-488e-a4b6-095f4e9e5305"
+        "outputId": "bb305e8e-92af-4899-c49f-86a8635d1b6c"
       },
       "source": [
         "properties.index.name=\"Date\"\n",
@@ -229,7 +240,7 @@
         "print(properties.tail(3).index.tolist())\n",
         "#print(properties.loc[['1995-01-01','2020-01-01']])\n"
       ],
-      "execution_count": 70,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,18 +296,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 289
         },
-        "outputId": "1af29a15-f642-4514-ffd9-5843147279e9"
+        "outputId": "0f28999f-f2d6-43d9-ef46-f2f3f6550bee"
       },
       "source": [
         "properties=properties.dropna(axis='columns')\n",
         "#properties=properties.drop(['Inner London','Outer London','England'],axis=1)\n",
         "properties=properties.iloc[1:,:33]\n",
-        "properties=properties.transpose()\n",
+        "properties_transposed=properties.transpose()\n",
         "\n",
-        "print(properties.columns)\n",
-        "print(properties.head())\n"
+        "print(properties_transposed.columns)\n",
+        "print(properties_transposed.head())\n"
       ],
-      "execution_count": 71,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,7 +353,7 @@
         "colab": {}
       },
       "source": [
-        "properties.index.name=\"Boroughs\""
+        "properties_transposed.index.name=\"Boroughs\""
       ],
       "execution_count": 0,
       "outputs": []
@@ -366,60 +377,14 @@
       "metadata": {
         "id": "S2wM0qLuo2Zt",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 612
-        },
-        "outputId": "81db5cda-a381-4379-a8cc-74d66adba202"
+        "colab": {}
       },
       "source": [
         "\n",
         "\n"
       ],
-      "execution_count": 77,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "                            0\n",
-            "Boroughs                     \n",
-            "Hackney               9.32976\n",
-            "City of London        8.47805\n",
-            "Lambeth               7.77162\n",
-            "Westminster           7.66041\n",
-            "Haringey              7.58614\n",
-            "Tower Hamlets         7.52806\n",
-            "Southwark             7.40385\n",
-            "Waltham Forest        7.37611\n",
-            "Islington              7.2789\n",
-            "Wandsworth            6.89095\n",
-            "Newham                6.88869\n",
-            "Lewisham              6.81953\n",
-            "Camden                6.70039\n",
-            "Kensington & Chelsea  6.44882\n",
-            "Greenwich             6.30334\n",
-            "Merton                6.18854\n",
-            "Richmond upon Thames  6.17523\n",
-            "Hammersmith & Fulham  5.99935\n",
-            "Kingston upon Thames  5.97521\n",
-            "Barking & Dagenham    5.96623\n",
-            "Ealing                 5.9243\n",
-            "Redbridge              5.7953\n",
-            "Brent                  5.7291\n",
-            "Hounslow              5.70874\n",
-            "Hillingdon            5.59666\n",
-            "Barnet                5.58165\n",
-            "Harrow                 5.4279\n",
-            "Enfield               5.39704\n",
-            "Bromley               5.34773\n",
-            "Croydon               5.33071\n",
-            "Havering              5.28217\n",
-            "Sutton                5.19488\n",
-            "Bexley                5.10611\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -490,27 +455,52 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 296
+          "height": 602
         },
-        "outputId": "fdd83dda-7019-4b76-d49a-9bfd38b8b5ba"
+        "outputId": "29b2f6aa-8db2-4eee-f2eb-822843b15182"
       },
       "source": [
-        "city_of_london=properties.loc[\"City of London\"]\n",
+        "city_of_london=properties_transposed.loc[\"City of London\"]\n",
+        "\n",
         "city_of_london.plot.line()\n"
       ],
-      "execution_count": 81,
+      "execution_count": 108,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Date\n",
+            "1995-01-01      91449\n",
+            "1995-02-01    82202.8\n",
+            "1995-03-01    79120.7\n",
+            "1995-04-01    77101.2\n",
+            "1995-05-01    84409.1\n",
+            "               ...   \n",
+            "2019-09-01     792034\n",
+            "2019-10-01     827093\n",
+            "2019-11-01     777610\n",
+            "2019-12-01     734872\n",
+            "2020-01-01     775309\n",
+            "Name: City of London, Length: 301, dtype: object\n",
+            "count        301.00000\n",
+            "unique       301.00000\n",
+            "top       719870.90244\n",
+            "freq           1.00000\n",
+            "Name: City of London, dtype: float64\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fd6f166b438>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fd6f166bd30>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 81
+          "execution_count": 108
         },
         {
           "output_type": "display_data",
@@ -548,13 +538,49 @@
       "metadata": {
         "id": "e0DF92cyqnu8",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 323
+        },
+        "outputId": "e979003a-849f-4b7a-e187-1b9a834a49b0"
       },
       "source": [
-        ""
+        "#city_of_london_resampled=city_of_london.astype('float').resample(\"Y\").mean()\n",
+        "#print(city_of_london_resampled)\n",
+        "#city_of_london_resampled.plot.line()\n",
+        "#print(properties_transposed.head())\n",
+        "properties_year=properties.astype('float').resample('Y').mean()\n",
+        "print(properties_year.head())\n",
+        "properties_year_transposed=properties_year.transpose()\n",
+        "print(properties_year_transposed.head())"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Boroughs    City of London  Barking & Dagenham  ...     Wandsworth    Westminster\n",
+            "Date                                            ...                              \n",
+            "1995-12-31    99085.008156        51817.969390  ...   88829.083075  133689.233033\n",
+            "1996-12-31   105651.057557        51718.192690  ...   92270.037989  139188.760342\n",
+            "1997-12-31   117113.442375        55974.262309  ...  108108.356495  165447.591208\n",
+            "1998-12-31   148031.894542        60285.821083  ...  125406.807233  190531.949942\n",
+            "1999-12-31   171300.061875        65320.934441  ...  145339.809767  214042.702508\n",
+            "\n",
+            "[5 rows x 33 columns]\n",
+            "Date                  1995-12-31     1996-12-31  ...     2019-12-31    2020-12-31\n",
+            "Boroughs                                         ...                             \n",
+            "City of London      99085.008156  105651.057557  ...  786983.144137  775308.88879\n",
+            "Barking & Dagenham  51817.969390   51718.192690  ...  299293.997014  301057.36349\n",
+            "Barnet              91792.537433   94000.445448  ...  519552.621184  520681.96788\n",
+            "Bexley              64291.532845   65490.417234  ...  337537.312161  331683.17222\n",
+            "Brent               73029.841840   75235.918367  ...  474171.938538  408522.50927\n",
+            "\n",
+            "[5 rows x 26 columns]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -592,53 +618,53 @@
           "base_uri": "https://localhost:8080/",
           "height": 612
         },
-        "outputId": "af859fbb-cb7d-4c82-caa7-f03708cc474c"
+        "outputId": "daf579d1-3664-433e-cbe9-b9cc4fcec774"
       },
       "source": [
-        "properties_max=(properties['2020-01-01']/properties['1995-01-01']).to_frame()\n",
+        "properties_max=(properties_year_transposed['2020-12-31']/properties_year_transposed['1995-12-31']).to_frame()\n",
         "sort = properties_max.sort_values(properties_max.columns[0], ascending = False)\n",
         "print(sort)"
       ],
-      "execution_count": 78,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "                            0\n",
-            "Boroughs                     \n",
-            "Hackney               9.32976\n",
-            "City of London        8.47805\n",
-            "Lambeth               7.77162\n",
-            "Westminster           7.66041\n",
-            "Haringey              7.58614\n",
-            "Tower Hamlets         7.52806\n",
-            "Southwark             7.40385\n",
-            "Waltham Forest        7.37611\n",
-            "Islington              7.2789\n",
-            "Wandsworth            6.89095\n",
-            "Newham                6.88869\n",
-            "Lewisham              6.81953\n",
-            "Camden                6.70039\n",
-            "Kensington & Chelsea  6.44882\n",
-            "Greenwich             6.30334\n",
-            "Merton                6.18854\n",
-            "Richmond upon Thames  6.17523\n",
-            "Hammersmith & Fulham  5.99935\n",
-            "Kingston upon Thames  5.97521\n",
-            "Barking & Dagenham    5.96623\n",
-            "Ealing                 5.9243\n",
-            "Redbridge              5.7953\n",
-            "Brent                  5.7291\n",
-            "Hounslow              5.70874\n",
-            "Hillingdon            5.59666\n",
-            "Barnet                5.58165\n",
-            "Harrow                 5.4279\n",
-            "Enfield               5.39704\n",
-            "Bromley               5.34773\n",
-            "Croydon               5.33071\n",
-            "Havering              5.28217\n",
-            "Sutton                5.19488\n",
-            "Bexley                5.10611\n"
+            "                             0\n",
+            "Boroughs                      \n",
+            "Hackney               8.661666\n",
+            "City of London        7.824684\n",
+            "Southwark             7.821531\n",
+            "Lambeth               7.733424\n",
+            "Westminster           7.622366\n",
+            "Waltham Forest        7.380859\n",
+            "Haringey              7.227013\n",
+            "Tower Hamlets         7.080148\n",
+            "Islington             7.047439\n",
+            "Lewisham              7.005934\n",
+            "Wandsworth            6.870002\n",
+            "Newham                6.758055\n",
+            "Camden                6.731870\n",
+            "Merton                6.309223\n",
+            "Greenwich             6.194981\n",
+            "Richmond upon Thames  6.143414\n",
+            "Kensington & Chelsea  6.109007\n",
+            "Hammersmith & Fulham  6.080402\n",
+            "Kingston upon Thames  5.833608\n",
+            "Ealing                5.827085\n",
+            "Barking & Dagenham    5.809903\n",
+            "Redbridge             5.764088\n",
+            "Barnet                5.672378\n",
+            "Hounslow              5.653213\n",
+            "Hillingdon            5.602662\n",
+            "Brent                 5.593912\n",
+            "Harrow                5.509142\n",
+            "Enfield               5.436813\n",
+            "Croydon               5.348871\n",
+            "Bromley               5.328429\n",
+            "Sutton                5.286937\n",
+            "Havering              5.260439\n",
+            "Bexley                5.159049\n"
           ],
           "name": "stdout"
         }
