--- a/ArtiomFine_Unit_4_Challenge_Tier_3.ipynb
+++ b/ArtiomFine_Unit_4_Challenge_Tier_3.ipynb
@@ -228,9 +228,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 428
         },
-        "outputId": "bb305e8e-92af-4899-c49f-86a8635d1b6c"
+        "outputId": "7037f098-1c4b-41a7-8fa6-5d255bbd3281"
       },
       "source": [
+        "#changing value to date, exploring data\n",
         "properties.index.name=\"Date\"\n",
         "\n",
         "print(properties.columns)\n",
@@ -240,7 +241,7 @@
         "print(properties.tail(3).index.tolist())\n",
         "#print(properties.loc[['1995-01-01','2020-01-01']])\n"
       ],
-      "execution_count": 96,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,9 +297,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 289
         },
-        "outputId": "0f28999f-f2d6-43d9-ef46-f2f3f6550bee"
+        "outputId": "a42a35f6-dae7-4a7c-84fc-9dcbec220e9b"
       },
       "source": [
+        "#Dropping empty columns, keeping data that is left\n",
         "properties=properties.dropna(axis='columns')\n",
         "#properties=properties.drop(['Inner London','Outer London','England'],axis=1)\n",
         "properties=properties.iloc[1:,:33]\n",
@@ -307,7 +309,7 @@
         "print(properties_transposed.columns)\n",
         "print(properties_transposed.head())\n"
       ],
-      "execution_count": 97,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -455,52 +457,29 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 602
+          "height": 296
         },
-        "outputId": "29b2f6aa-8db2-4eee-f2eb-822843b15182"
+        "outputId": "5f61b5bf-8531-4107-91da-928625ab01ea"
       },
       "source": [
+        "#Plot city of london\n",
         "city_of_london=properties_transposed.loc[\"City of London\"]\n",
         "\n",
         "city_of_london.plot.line()\n"
       ],
-      "execution_count": 108,
+      "execution_count": 7,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Date\n",
-            "1995-01-01      91449\n",
-            "1995-02-01    82202.8\n",
-            "1995-03-01    79120.7\n",
-            "1995-04-01    77101.2\n",
-            "1995-05-01    84409.1\n",
-            "               ...   \n",
-            "2019-09-01     792034\n",
-            "2019-10-01     827093\n",
-            "2019-11-01     777610\n",
-            "2019-12-01     734872\n",
-            "2020-01-01     775309\n",
-            "Name: City of London, Length: 301, dtype: object\n",
-            "count        301.00000\n",
-            "unique       301.00000\n",
-            "top       719870.90244\n",
-            "freq           1.00000\n",
-            "Name: City of London, dtype: float64\n"
-          ],
-          "name": "stdout"
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fd6f166bd30>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fa34ea3a908>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 108
+          "execution_count": 7
         },
         {
           "output_type": "display_data",
@@ -542,19 +521,16 @@
           "base_uri": "https://localhost:8080/",
           "height": 323
         },
-        "outputId": "e979003a-849f-4b7a-e187-1b9a834a49b0"
+        "outputId": "6b0a5850-5833-4080-f7a5-ac4ee8555662"
       },
       "source": [
-        "#city_of_london_resampled=city_of_london.astype('float').resample(\"Y\").mean()\n",
-        "#print(city_of_london_resampled)\n",
-        "#city_of_london_resampled.plot.line()\n",
-        "#print(properties_transposed.head())\n",
+        "#resampling by year and transposing\n",
         "properties_year=properties.astype('float').resample('Y').mean()\n",
         "print(properties_year.head())\n",
         "properties_year_transposed=properties_year.transpose()\n",
         "print(properties_year_transposed.head())"
       ],
-      "execution_count": 121,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -618,53 +594,53 @@
           "base_uri": "https://localhost:8080/",
           "height": 612
         },
-        "outputId": "daf579d1-3664-433e-cbe9-b9cc4fcec774"
+        "outputId": "956f268b-3690-4015-e985-a4ab248973b5"
       },
       "source": [
-        "properties_max=(properties_year_transposed['2020-12-31']/properties_year_transposed['1995-12-31']).to_frame()\n",
+        "properties_max=(properties_year_transposed['1995-12-31']/properties_year_transposed['2020-12-31']).to_frame()\n",
         "sort = properties_max.sort_values(properties_max.columns[0], ascending = False)\n",
         "print(sort)"
       ],
-      "execution_count": 123,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "                             0\n",
             "Boroughs                      \n",
-            "Hackney               8.661666\n",
-            "City of London        7.824684\n",
-            "Southwark             7.821531\n",
-            "Lambeth               7.733424\n",
-            "Westminster           7.622366\n",
-            "Waltham Forest        7.380859\n",
-            "Haringey              7.227013\n",
-            "Tower Hamlets         7.080148\n",
-            "Islington             7.047439\n",
-            "Lewisham              7.005934\n",
-            "Wandsworth            6.870002\n",
-            "Newham                6.758055\n",
-            "Camden                6.731870\n",
-            "Merton                6.309223\n",
-            "Greenwich             6.194981\n",
-            "Richmond upon Thames  6.143414\n",
-            "Kensington & Chelsea  6.109007\n",
-            "Hammersmith & Fulham  6.080402\n",
-            "Kingston upon Thames  5.833608\n",
-            "Ealing                5.827085\n",
-            "Barking & Dagenham    5.809903\n",
-            "Redbridge             5.764088\n",
-            "Barnet                5.672378\n",
-            "Hounslow              5.653213\n",
-            "Hillingdon            5.602662\n",
-            "Brent                 5.593912\n",
-            "Harrow                5.509142\n",
-            "Enfield               5.436813\n",
-            "Croydon               5.348871\n",
-            "Bromley               5.328429\n",
-            "Sutton                5.286937\n",
-            "Havering              5.260439\n",
-            "Bexley                5.159049\n"
+            "Bexley                0.193834\n",
+            "Havering              0.190098\n",
+            "Sutton                0.189145\n",
+            "Bromley               0.187673\n",
+            "Croydon               0.186955\n",
+            "Enfield               0.183931\n",
+            "Harrow                0.181516\n",
+            "Brent                 0.178766\n",
+            "Hillingdon            0.178487\n",
+            "Hounslow              0.176891\n",
+            "Barnet                0.176293\n",
+            "Redbridge             0.173488\n",
+            "Barking & Dagenham    0.172120\n",
+            "Ealing                0.171612\n",
+            "Kingston upon Thames  0.171420\n",
+            "Hammersmith & Fulham  0.164463\n",
+            "Kensington & Chelsea  0.163693\n",
+            "Richmond upon Thames  0.162776\n",
+            "Greenwich             0.161421\n",
+            "Merton                0.158498\n",
+            "Camden                0.148547\n",
+            "Newham                0.147972\n",
+            "Wandsworth            0.145560\n",
+            "Lewisham              0.142736\n",
+            "Islington             0.141896\n",
+            "Tower Hamlets         0.141240\n",
+            "Haringey              0.138370\n",
+            "Waltham Forest        0.135486\n",
+            "Westminster           0.131193\n",
+            "Lambeth               0.129309\n",
+            "Southwark             0.127852\n",
+            "City of London        0.127801\n",
+            "Hackney               0.115451\n"
           ],
           "name": "stdout"
         }
@@ -683,6 +659,16 @@
         "Look back at your notebook. Think about how you might summarize what you have done, and prepare a quick presentation on it to your mentor at your next meeting. \n",
         "\n",
         "We hope you enjoyed this practical project. It should have consolidated your data hygiene and pandas skills by looking at a real-world problem involving just the kind of dataset you might encounter as a budding data scientist. Congratulations, and looking forward to seeing you at the next step in the course! "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8P7Co894b0Pg",
+        "colab_type": "text"
+      },
+      "source": [
+        "The ranking of which county has the largest price increase fluctuates a bit depending on which years you choose. If you go from 1995 to 2020, the highest ratio was the Bexley borough, and the lowest is Hackney. The list from highest to lowest is available in the last paragraph."
       ]
     }
   ]
