Adding comments to final version

--- a/ArtiomFine_Unit_4_Challenge_Tier_3.ipynb
+++ b/ArtiomFine_Unit_4_Challenge_Tier_3.ipynb
@@ -22,21 +22,10 @@
     "colab": {
       "name": "ArtiomFine Unit 4 Challenge - Tier 3.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/TAnarchy/EngineGroupApplication/blob/master/ArtiomFine_Unit_4_Challenge_Tier_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -228,7 +217,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 428
         },
-        "outputId": "7037f098-1c4b-41a7-8fa6-5d255bbd3281"
+        "outputId": "c3922a72-7ac1-41b1-d3d1-10dcc32688e4"
       },
       "source": [
         "#changing value to date, exploring data\n",
@@ -241,7 +230,7 @@
         "print(properties.tail(3).index.tolist())\n",
         "#print(properties.loc[['1995-01-01','2020-01-01']])\n"
       ],
-      "execution_count": 4,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -297,7 +286,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 289
         },
-        "outputId": "a42a35f6-dae7-4a7c-84fc-9dcbec220e9b"
+        "outputId": "553ad3a3-bf33-4b35-ccdd-3987db0acfc3"
       },
       "source": [
         "#Dropping empty columns, keeping data that is left\n",
@@ -309,7 +298,7 @@
         "print(properties_transposed.columns)\n",
         "print(properties_transposed.head())\n"
       ],
-      "execution_count": 5,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -459,7 +448,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 296
         },
-        "outputId": "5f61b5bf-8531-4107-91da-928625ab01ea"
+        "outputId": "520c8212-cab8-4486-e72e-9786ae26295d"
       },
       "source": [
         "#Plot city of london\n",
@@ -467,19 +456,19 @@
         "\n",
         "city_of_london.plot.line()\n"
       ],
-      "execution_count": 7,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fa34ea3a908>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fa34cf70710>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 20
         },
         {
           "output_type": "display_data",
@@ -521,7 +510,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 323
         },
-        "outputId": "6b0a5850-5833-4080-f7a5-ac4ee8555662"
+        "outputId": "7ad35097-f6dc-445e-e7d7-ad285d35f36b"
       },
       "source": [
         "#resampling by year and transposing\n",
@@ -530,7 +519,7 @@
         "properties_year_transposed=properties_year.transpose()\n",
         "print(properties_year_transposed.head())"
       ],
-      "execution_count": 8,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -594,14 +583,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 612
         },
-        "outputId": "956f268b-3690-4015-e985-a4ab248973b5"
+        "outputId": "512a5416-4f37-41ba-b70b-2aaa304a93f4"
       },
       "source": [
+        "#Get the ratios and sorted from highest to lowest\n",
         "properties_max=(properties_year_transposed['1995-12-31']/properties_year_transposed['2020-12-31']).to_frame()\n",
         "sort = properties_max.sort_values(properties_max.columns[0], ascending = False)\n",
-        "print(sort)"
+        "print(sort)\n"
       ],
-      "execution_count": 11,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
