Working on Data wrangling

--- a/Noebook_Step2.ipynb
+++ b/Noebook_Step2.ipynb
@@ -6,8 +6,7 @@
       "name": "Noebook_Step2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -46,16 +45,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/TAnarchy/EngineGroupApplication/blob/master/Noebook_Step2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -796,13 +785,54 @@
       "metadata": {
         "colab_type": "code",
         "id": "uPd3Kki096wp",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 493
+        },
+        "outputId": "ba934fbe-7dee-49de-b9d1-0ba33f5d9fde"
       },
       "source": [
-        ""
+        "\n",
+        "data.apply(lambda a: print(a.name+\" \"+str(a.nunique())))\n",
+        "print()\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Name 329\n",
+            "Region 38\n",
+            "state 35\n",
+            "summit_elev 266\n",
+            "vertical_drop 193\n",
+            "base_elev 244\n",
+            "trams 5\n",
+            "fastEight 2\n",
+            "fastSixes 7\n",
+            "fastQuads 14\n",
+            "quad 7\n",
+            "triple 9\n",
+            "double 10\n",
+            "surface 12\n",
+            "total_chairs 31\n",
+            "Runs 110\n",
+            "TerrainParks 11\n",
+            "LongestRun_mi 42\n",
+            "SkiableTerrain_ac 193\n",
+            "Snow Making_ac 143\n",
+            "daysOpenLastYear 111\n",
+            "yearsOpen 72\n",
+            "averageSnowfall 107\n",
+            "AdultWeekday 83\n",
+            "AdultWeekend 81\n",
+            "projectedDaysOpen 90\n",
+            "NightSkiing_ac 78\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -819,13 +849,53 @@
       "metadata": {
         "colab_type": "code",
         "id": "Zs84OwNJEy2a",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 493
+        },
+        "outputId": "250fc3e8-92db-4ca6-c3a1-06c226be33d3"
       },
       "source": [
-        ""
+        "data.apply(lambda a: print(a.name+\" \"+str(round(a.nunique()/a.count()*100,2))+\"%\"))\n",
+        "print()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Name 99.7%\n",
+            "Region 11.52%\n",
+            "state 10.61%\n",
+            "summit_elev 80.61%\n",
+            "vertical_drop 58.48%\n",
+            "base_elev 73.94%\n",
+            "trams 1.52%\n",
+            "fastEight 1.22%\n",
+            "fastSixes 2.12%\n",
+            "fastQuads 4.24%\n",
+            "quad 2.12%\n",
+            "triple 2.73%\n",
+            "double 3.03%\n",
+            "surface 3.64%\n",
+            "total_chairs 9.39%\n",
+            "Runs 33.74%\n",
+            "TerrainParks 3.94%\n",
+            "LongestRun_mi 12.92%\n",
+            "SkiableTerrain_ac 59.02%\n",
+            "Snow Making_ac 50.35%\n",
+            "daysOpenLastYear 39.78%\n",
+            "yearsOpen 21.88%\n",
+            "averageSnowfall 33.86%\n",
+            "AdultWeekday 30.07%\n",
+            "AdultWeekend 29.03%\n",
+            "projectedDaysOpen 31.8%\n",
+            "NightSkiing_ac 41.71%\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
